--- a/angular.json
+++ b/angular.json
@@ -56,7 +56,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -97,8 +103,21 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "Slack_clone:build:production",
+            "firebaseProject": "slack-cd3d1",
+            "firebaseHostingSite": "slack-cd3d1"
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
