--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.2.0",
     "ngx-quill": "^20.0.1",
     "quill": "^1.3.7",
+    "quill-mention": "^3.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
