--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
+                  "maximumWarning": "2.5mb",
                   "maximumError": "3mb"
                 },
                 {
